# napari-avi-activity

./: README.md  pyproject.toml
src/activity_tracking_for_avi/: __init__.py  _reader.py  _widget.py  napari.yaml
src/activity_tracking_for_avi/_tests/: test_reader.py  test_widget.py
