[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "activity-tracking-for-avi"
version = "0.1.0"
description = "A napari plugin for analyzing activity and sleep behavior from AVI video files"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "napari>=0.4.18",
    "numpy",
    "opencv-python",
    "matplotlib",
    "scikit-image",
]

[project.urls]
"Source Code" = "https://github.com/s1alknau/napari-avi-activity"
"Bug Tracker" = "https://github.com/s1alknau/napari-avi-activity/issues"

[project.entry-points."napari.manifest"]
activity-tracking-for-avi = "activity_tracking_for_avi:napari.yaml"

[tool.setuptools]
packages = ["activity_tracking_for_avi"]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E", "F", "W", # flake8
    "B",           # flake8-bugbear
    "I",           # isort
    "ARG",         # flake8-unused-arguments
    "C4",          # flake8-comprehensions
    "EM",          # flake8-errmsg
    "ICN",         # flake8-import-conventions
    "ISC",         # flake8-implicit-str-concat
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "PL",          # pylint
    "PT",          # flake8-pytest-style
    "RET",         # flake8-return
    "RUF",         # Ruff-specific
    "SIM",         # flake8-simplify
    "T20",         # flake8-print
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
]
ignore = [
    "E501",      # line too long
    "PLE0604",   # Invalid object in `globals()`
    "PLE0605",   # Invalid object in `locals()`
    "PLR09",     # Too many X
    "PLR2004",   # Magic value used
    "PLW0603",   # Using the global statement
    "PLW2901",   # Try to use f-strings
    "RUF001",    # String contains X instead of Y
    "RUF002",    # I can't use doctestsf
    "RUF003",    # I can't use comments
]